# earthscape

./: .gitignore  README.md  config.yaml  create_splits.py  dataset.py  evaluate.py  export_onnx.py  interactive_patch_map.html  label_eda.py  map_patches.py  metrics.py  model.py  pyproject.toml  requirements.txt  ruff.toml  run_experiments.py  run_experiments.sh  sagemaker_launch.py  train.py  utils.py
experiments/: convnext_fusion.yaml  convnext_fusion_gated.yaml  convnext_midfusion.yaml  convnext_rgb.yaml  convnext_small_fusion.yaml  deit_early_fusion.yaml  deit_fusion.yaml  deit_fusion_drop_path.yaml  deit_fusion_gated.yaml  deit_fusion_v2.yaml  deit_fusion_v2_llrd.yaml  deit_latefusion.yaml  deit_rgb.yaml  efficientnet_rgb.yaml  midfusion_all.yaml  midfusion_topo_only.yaml  midfusion_v3.yaml  midfusion_v4.yaml  resnet50_rgb.yaml  swin_fusion.yaml  swin_fusion_gated.yaml  swin_rgb.yaml
models/: __init__.py  convnext_midfusion.py  deit.py  deit_latefusion.py  deit_v1.py  midfusion.py  midfusion_v3.py  midfusion_v4.py  modern_fusion.py  modern_fusion_v1.py  rgb_backbone.py
standalone_scripts/: DataDictionary_v1_0_1.txt  README_v1_0_1.txt  create_splits.py  data_downloader.md  interactive_patch_map_v1.html  label_eda.py  map_patches.py  s3_check.py
